snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.module.sha256
263ab6ab578a622ba96c80f477931a2d4931d1621dee6f566ef3b3cd62ab35d5